Comments are now readable. Bug with like/dislike button fixed.

--- a/surveys/static/css/comments.css
+++ b/surveys/static/css/comments.css
@@ -18,7 +18,7 @@
 }
 
 .commentRefBody{
-    background-color: white;
+    background-color: black;
     border-color: black;
     border-width: 1px;
     border-radius: 5px;
